--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "papaparse": "^5.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
